option('libgif', type: 'feature', value: 'auto')
option('libjp2k', type: 'feature', value: 'auto')
option('libjpeg', type: 'feature', value: 'auto')
option('libpng', type: 'feature', value: 'auto')
option('libtiff', type: 'feature', value: 'auto')
option('libwebp', type: 'feature', value: 'auto')
option('libz', type: 'feature', value: 'auto')
